--- a/index.html
+++ b/index.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Agastyaa Aerospace</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Welcome to Agastyaa Aerospace</h1>
-  <p>This website is hosted for free using GitHub Pages.</p>
+  <header>
+    <h1>Agastyaa Aerospace</h1>
+    <p>Engineering • Research • Innovation</p>
+  </header>
+
+  <section>
+    <h2>About</h2>
+    <p>Agastyaa Aerospace is focused on aerospace engineering, design, and research-driven innovation.</p>
+  </section>
+
+  <section>
+    <h2>Projects</h2>
+    <ul>
+      <li>Aircraft Structural Analysis</li>
+      <li>Propulsion Concepts</li>
+      <li>CFD-Based Aerodynamic Studies</li>
+    </ul>
+  </section>
+
+  <footer>
+    <p>© 2026 Agastyaa Aerospace</p>
+  </footer>
 </body>
 </html>
+
