--- a/index.html
+++ b/index.html
@@ -1,33 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Agastyaa Aerospace</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Agastyaa Aerospace</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Agastyaa Aerospace</h1>
-    <p>Engineering • Research • Innovation</p>
-  </header>
+    <header>
+        <h1>Agastyaa Aerospace</h1>
+        <p>Welcome to my professional portfolio</p>
+    </header>
 
-  <section>
-    <h2>About</h2>
-    <p>Agastyaa Aerospace is focused on aerospace engineering, design, and research-driven innovation.</p>
-  </section>
+    <nav>
+        <ul>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#experience">Work Experience</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#downloads">Downloads</a></li>
+        </ul>
+    </nav>
 
-  <section>
-    <h2>Projects</h2>
-    <ul>
-      <li>Aircraft Structural Analysis</li>
-      <li>Propulsion Concepts</li>
-      <li>CFD-Based Aerodynamic Studies</li>
-    </ul>
-  </section>
+    <main>
+        <section id="about">
+            <h2>About Me</h2>
+            <p>Hello! I'm Agastyaa, a passionate aerospace engineer with a background in [Your Educational Background]. I specialize in [Your Specializations].</p>
+        </section>
 
-  <footer>
-    <p>© 2026 Agastyaa Aerospace</p>
-  </footer>
+        <section id="experience">
+            <h2>Work Experience</h2>
+            <p>Here you can list your previous positions, roles, and accomplishments. For example:</p>
+            <ul>
+                <li><strong>Position:</strong> Aerospace Engineer at XYZ Corp</li>
+                <li><strong>Responsibilities:</strong> Worked on aircraft design and testing</li>
+                <li><strong>Achievements:</strong> Led a team in developing a new propulsion system</li>
+            </ul>
+        </section>
+
+        <section id="projects">
+            <h2>Projects</h2>
+            <p>Here you can showcase your key projects. For example:</p>
+            <ul>
+                <li><strong>Project Name:</strong> Advanced Aircraft Structural Analysis</li>
+                <li><strong>Description:</strong> A detailed study on structural integrity under various conditions</li>
+                <li><strong>Link:</strong> <a href="#">View Project</a></li>
+            </ul>
+        </section>
+
+        <section id="downloads">
+            <h2>Downloads</h2>
+            <p>You can provide links to your resume, portfolio, and other documents here.</p>
+            <ul>
+                <li><a href="#">Download Resume</a></li>
+                <li><a href="#">Download Portfolio</a></li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2026 Agastyaa Aerospace</p>
+    </footer>
 </body>
 </html>
-
