--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agastyaa Aerospace</title>
     <link rel="stylesheet" href="style.css">
+    <!-- Add Google Fonts for improved typography -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -29,7 +31,6 @@
 
         <section id="experience">
             <h2>Work Experience</h2>
-            <p>Here you can list your previous positions, roles, and accomplishments. For example:</p>
             <ul>
                 <li><strong>Position:</strong> Aerospace Engineer at XYZ Corp</li>
                 <li><strong>Responsibilities:</strong> Worked on aircraft design and testing</li>
@@ -39,7 +40,6 @@
 
         <section id="projects">
             <h2>Projects</h2>
-            <p>Here you can showcase your key projects. For example:</p>
             <ul>
                 <li><strong>Project Name:</strong> Advanced Aircraft Structural Analysis</li>
                 <li><strong>Description:</strong> A detailed study on structural integrity under various conditions</li>
@@ -49,7 +49,6 @@
 
         <section id="downloads">
             <h2>Downloads</h2>
-            <p>You can provide links to your resume, portfolio, and other documents here.</p>
             <ul>
                 <li><a href="#">Download Resume</a></li>
                 <li><a href="#">Download Portfolio</a></li>
