--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agastyaa Aerospace</title>
     <link rel="stylesheet" href="style.css">
-    <!-- Add Google Fonts for improved typography -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -27,6 +25,7 @@
         <section id="about">
             <h2>About Me</h2>
             <p>Hello! I'm Agastyaa, a passionate aerospace engineer with a background in [Your Educational Background]. I specialize in [Your Specializations].</p>
+            <img src="path/to/your-image.jpg" alt="Agastyaa's Image" class="profile-img">
         </section>
 
         <section id="experience">
