--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 </head>
 <body>
     <header>
-        <h1>Agastyaa Aerospace</h1>
-        <p>Welcome to my professional portfolio</p>
+        <div class="header-container">
+            <img src="path/to/your-profile-pic.jpg" alt="Profile Picture" class="profile-img">
+            <div>
+                <h1>Agastyaa Aerospace</h1>
+                <p>Welcome to my professional portfolio</p>
+            </div>
+        </div>
     </header>
 
     <nav>
@@ -56,7 +61,9 @@
     </main>
 
     <footer>
-        <p>&copy; 2026 Agastyaa Aerospace</p>
+        <p>&copy; <span id="current-year"></span> Agastyaa Aerospace</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
