--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="header-container">
             <img src="path/to/your-profile-pic.jpg" alt="Profile Picture" class="profile-img">
-            <div>
+            <div class="header-text">
                 <h1>Agastyaa Aerospace</h1>
                 <p>Welcome to my professional portfolio</p>
             </div>
@@ -54,8 +54,8 @@
         <section id="downloads">
             <h2>Downloads</h2>
             <ul>
-                <li><a href="#">Download Resume</a></li>
-                <li><a href="#">Download Portfolio</a></li>
+                <li><a href="path/to/resume.pdf" download>Download Resume</a></li>
+                <li><a href="path/to/portfolio.pdf" download>Download Portfolio</a></li>
             </ul>
         </section>
     </main>
