--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-XXXXXXXXXX');
+    gtag('config', 'G-YHM2NNKCM8');
   </script>
 
   <link rel="stylesheet" href="style.css" />
