--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
       <a href="assets/resume.pdf" class="btn-outline">Download CV</a>
     </div>
     <div class="social">
-      <a href="https://github.com/yourusername" target="_blank" rel="noopener"><i class="fab fa-github"></i></a>
-      <a href="https://linkedin.com/in/yourusername" target="_blank" rel="noopener"><i class="fab fa-linkedin"></i></a>
-      <a href="https://twitter.com/yourusername" target="_blank" rel="noopener"><i class="fab fa-twitter"></i></a>
-      <a href="https://instagram.com/yourusername" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+      <a href="#" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+      <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
     </div>
   </div>
   <div class="hero-img">
-    <img src="assets/profile.jpg" alt="Bandaru Lokesh - Professional Portrait">
+    <img src="assets/profile.jpg" alt="Bandaru Lokesh">
   </div>
 </section>
 
@@ -70,7 +70,7 @@
         <a href="#contact" class="btn-outline">Contact Me</a>
       </div>
     </div>
-    <img src="https://today.ucsd.edu/news_uploads/drone-research-4.jpg" alt="Bandaru Lokesh working on aerospace project">
+    <img src="assets/about.jpg" alt="Aerospace project work"> <!-- Add your own photo here -->
   </div>
 </section>
 
@@ -112,51 +112,49 @@
   <h2>My Projects & Work</h2>
   <div class="portfolio-grid">
     <div class="project-card">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/9/96/Quadcopter_Drone_in_flight.jpg" alt="Quadcopter Drone in Flight">
+      <img src="assets/project1.jpg" alt="Drone Project">
       <div class="project-content">
-        <h3>Quadcopter Drone Projects</h3>
-        <p>Designed, built, and tested multiple quadcopters focusing on aerodynamics, stability, and custom propulsion systems.</p>
+        <h3>Drone Projects</h3>
+        <p>Designed and tested multiple quadcopters and drones.</p>
       </div>
     </div>
     <div class="project-card">
-      <img src="https://images.pexels.com/photos/27016007/pexels-photo-27016007.jpeg" alt="RC Plane Landing">
+      <img src="assets/project2.jpg" alt="RC Plane">
       <div class="project-content">
         <h3>RC Plane Designs</h3>
-        <p>Created and flew over 15 remote-controlled aircraft models with custom airframes and control systems.</p>
+        <p>Over 15 custom remote-controlled aircraft models.</p>
       </div>
     </div>
     <div class="project-card">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/e/e7/HHAMS_Planes_2015_E-flite_Apprentice_S_15e_w_custom_LED_lights_IMG_4034_FRD.jpg" alt="Custom Model Aircraft with LED Lights">
+      <img src="assets/project3.jpg" alt="Model Aircraft">
       <div class="project-content">
-        <h3>Advanced Model Aircraft Builds</h3>
-        <p>Constructed 8+ scale model aircraft, including custom modifications like LED lighting for enhanced functionality.</p>
+        <h3>Model Aircraft Builds</h3>
+        <p>Built 8+ scale models with custom features.</p>
       </div>
     </div>
   </div>
 </section>
 
-<section id="resume" class="section light">
+<section id="resume" class="section">
   <p class="section-tag">RESUME</p>
   <h2>Detailed Resume</h2>
   <div class="resume-container">
     <div class="resume-column">
       <h3>Education</h3>
       <div class="resume-item">
-        <h4>B.Tech in Aerospace Engineering</h4>
-        <p>GITAM University, Hyderabad, Telangana</p>
-        <p>2023 – Present (Expected Graduation: 2027)</p>
-        <p>Relevant Coursework: Aerodynamics, Propulsion Systems, Aircraft Structures, CFD, Spacecraft Design</p>
+        <h4>B.Tech Aerospace Engineering</h4>
+        <p>GITAM University, Hyderabad</p>
+        <p>2023 – Present</p>
       </div>
     </div>
     <div class="resume-column">
-      <h3>Achievements & Experience</h3>
+      <h3>Experience & Achievements</h3>
       <ul class="resume-list">
-        <li>Completed 10+ independent drone projects</li>
-        <li>Designed 15+ RC plane models with flight testing</li>
-        <li>Accumulated 20+ hours of hands-on flight experience</li>
-        <li>Built and customized 8+ model aircraft</li>
+        <li>10+ Drone Projects Completed</li>
+        <li>15+ RC Plane Designs</li>
+        <li>20+ Flight Hours</li>
+        <li>8+ Model Aircraft Built</li>
       </ul>
-      <p class="mt-20"><strong>Full skills list available in Skills section.</strong></p>
     </div>
   </div>
   <div class="resume-download">
@@ -164,7 +162,7 @@
   </div>
 </section>
 
-<section id="contact" class="section">
+<section id="contact" class="section light">
   <p class="section-tag">CONTACT</p>
   <h2>Get In Touch</h2>
   <form class="contact-form">
@@ -173,7 +171,6 @@
     <textarea placeholder="Your Message" required></textarea>
     <button type="submit" class="btn">Send Message</button>
   </form>
-  <p class="form-note">Note: To make the form work, sign up for a free service like Formspree or EmailJS and update the form action.</p>
 </section>
 
 <footer>
