--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 <body>
 <header class="navbar">
-  <div class="logo">AEROSPACE</div>
+  <div class="logo">
+    <i class="fas fa-rocket" aria-hidden="true"></i>
+    <span class="logo-text">AEROSPACE</span>
+  </div>
   <div class="hamburger">
     <span class="bar"></span>
     <span class="bar"></span>
@@ -31,7 +34,8 @@
 </header>
 
 <section id="home" class="hero">
-  <div class="hero-text">
+  <div class="hero-overlay"></div>
+  <div class="hero-content">
     <span class="tag">👋 Welcome to my Portfolio</span>
     <h1>Hi, I'm <span>Bandaru Lokesh</span></h1>
     <h3>Aerospace Engineering Student</h3>
@@ -46,9 +50,9 @@
       <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
       <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
     </div>
-  </div>
-  <div class="hero-img">
-    <img src="assets/profile.jpg" alt="Bandaru Lokesh">
+    <div class="hero-profile">
+      <img src="assets/profile.jpg" alt="Bandaru Lokesh">
+    </div>
   </div>
 </section>
 
