--- a/index.html
+++ b/index.html
@@ -4,183 +4,361 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Bandaru Lokesh | Aerospace Portfolio</title>
-  <link rel="stylesheet" href="css/style.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <style>
+    :root {
+      --primary: #003087;
+      --accent: #00aaff;
+      --dark: #121212;
+      --light: #f8fbff;
+      --gray: #555555;
+      --text: #333333;
+    }
+
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+
+    body {
+      font-family: 'Poppins', sans-serif;
+      line-height: 1.6;
+      color: var(--text);
+      background: #ffffff;
+    }
+
+    /* Beautiful Navbar */
+    .navbar {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      padding: 30px 5%;
+      background: transparent;
+      transition: all 0.4s ease;
+      z-index: 1000;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .navbar.scrolled {
+      padding: 15px 5%;
+      background: rgba(255, 255, 255, 0.95);
+      backdrop-filter: blur(12px);
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+    }
+
+    .logo {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      font-size: 2rem;
+      font-weight: 700;
+      color: white;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+      transition: color 0.4s;
+    }
+
+    .logo i {
+      font-size: 2.6rem;
+      color: var(--accent);
+    }
+
+    .navbar.scrolled .logo { color: var(--dark); }
+    .navbar.scrolled .logo i { color: var(--primary); }
+
+    .hamburger {
+      display: none;
+      cursor: pointer;
+      flex-direction: column;
+      gap: 6px;
+    }
+
+    .bar {
+      width: 30px;
+      height: 4px;
+      background: white;
+      transition: all 0.3s ease;
+    }
+
+    .navbar.scrolled .bar { background: var(--dark); }
+
+    .hamburger.active .bar:nth-child(1) { transform: translateY(10px) rotate(45deg); }
+    .hamburger.active .bar:nth-child(2) { opacity: 0; }
+    .hamburger.active .bar:nth-child(3) { transform: translateY(-10px) rotate(-45deg); }
+
+    .nav-menu {
+      display: flex;
+      align-items: center;
+      gap: 3rem;
+    }
+
+    nav {
+      display: flex;
+      gap: 2.5rem;
+    }
+
+    nav a {
+      text-decoration: none;
+      color: white;
+      font-weight: 500;
+      font-size: 1.1rem;
+      transition: color 0.3s;
+    }
+
+    nav a:hover { color: var(--accent); }
+
+    .navbar.scrolled nav a { color: var(--dark); }
+    .navbar.scrolled nav a:hover { color: var(--primary); }
+
+    .btn-outline {
+      padding: 10px 28px;
+      border: 2px solid white;
+      color: white;
+      border-radius: 50px;
+      text-decoration: none;
+      font-weight: 600;
+      transition: all 0.3s;
+    }
+
+    .btn-outline:hover {
+      background: white;
+      color: var(--primary);
+    }
+
+    .navbar.scrolled .btn-outline {
+      border-color: var(--primary);
+      color: var(--primary);
+    }
+
+    .navbar.scrolled .btn-outline:hover {
+      background: var(--primary);
+      color: white;
+    }
+
+    /* Beautiful Hero Header */
+    .hero {
+      position: relative;
+      min-height: 100vh;
+      background-image: url('assets/hero-bg.jpg');
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      color: white;
+    }
+
+    .hero::before {
+      content: '';
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0, 30, 100, 0.6);
+      z-index: 1;
+    }
+
+    .hero-content {
+      position: relative;
+      z-index: 2;
+      max-width: 900px;
+      padding: 0 20px;
+    }
+
+    .tag {
+      display: inline-block;
+      background: rgba(255, 255, 255, 0.2);
+      backdrop-filter: blur(5px);
+      padding: 8px 24px;
+      border-radius: 50px;
+      font-size: 1rem;
+      margin-bottom: 24px;
+    }
+
+    .hero-content h1 {
+      font-size: 4.8rem;
+      margin: 20px 0;
+      line-height: 1.1;
+    }
+
+    .hero-content h1 span { color: var(--accent); }
+
+    .hero-content h3 {
+      font-size: 2.4rem;
+      margin-bottom: 20px;
+    }
+
+    .hero-content p {
+      font-size: 1.3rem;
+      max-width: 700px;
+      margin: 0 auto 40px;
+    }
+
+    .hero-buttons {
+      display: flex;
+      gap: 20px;
+      justify-content: center;
+      margin-bottom: 50px;
+    }
+
+    .btn {
+      padding: 14px 36px;
+      background: var(--accent);
+      color: white;
+      border-radius: 50px;
+      text-decoration: none;
+      font-weight: 600;
+      transition: all 0.3s;
+      box-shadow: 0 8px 20px rgba(0, 170, 255, 0.3);
+    }
+
+    .btn:hover {
+      background: white;
+      color: var(--primary);
+    }
+
+    .social {
+      display: flex;
+      gap: 20px;
+      justify-content: center;
+      margin-bottom: 40px;
+    }
+
+    .social a {
+      color: white;
+      font-size: 1.9rem;
+      transition: all 0.3s;
+    }
+
+    .social a:hover {
+      color: var(--accent);
+      transform: translateY(-6px);
+    }
+
+    .hero-profile img {
+      width: 220px;
+      height: 220px;
+      border-radius: 50%;
+      border: 8px solid white;
+      box-shadow: 0 15px 40px rgba(0, 0, 0, 0.4);
+    }
+
+    /* Rest of your sections (add your existing ones below) */
+    /* ... */
+
+    /* Mobile */
+    @media (max-width: 768px) {
+      .hamburger { display: flex; }
+      .nav-menu {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        background: rgba(255, 255, 255, 0.95);
+        flex-direction: column;
+        padding: 40px 0;
+        gap: 32px;
+        display: none;
+      }
+      .nav-menu.active { display: flex; }
+      nav { flex-direction: column; gap: 28px; }
+      .hero-content h1 { font-size: 3.5rem; }
+      .hero-content h3 { font-size: 2rem; }
+      .hero-buttons { flex-direction: column; align-items: center; }
+      .hero-profile img { width: 180px; height: 180px; }
+    }
+  </style>
 </head>
 <body>
-<header class="navbar">
-  <div class="logo">
-    <i class="fas fa-rocket" aria-hidden="true"></i>
-    <span class="logo-text">AEROSPACE</span>
-  </div>
-  <div class="hamburger">
-    <span class="bar"></span>
-    <span class="bar"></span>
-    <span class="bar"></span>
-  </div>
-  <div class="nav-menu">
-    <nav>
-      <a href="#home">Home</a>
-      <a href="#about">About</a>
-      <a href="#services">Services</a>
-      <a href="#skills">Skills</a>
-      <a href="#portfolio">Portfolio</a>
-      <a href="#resume">Resume</a>
-      <a href="#contact">Contact</a>
-    </nav>
-    <a href="assets/resume.pdf" class="btn-outline">Download CV</a>
-  </div>
-</header>
-
-<section id="home" class="hero">
-  <div class="hero-overlay"></div>
-  <div class="hero-content">
-    <span class="tag">👋 Welcome to my Portfolio</span>
-    <h1>Hi, I'm <span>Bandaru Lokesh</span></h1>
-    <h3>Aerospace Engineering Student</h3>
-    <p>Enthusiastic aerospace engineering student with a strong foundation in aerodynamics, propulsion, and spacecraft design.</p>
-    <div class="hero-buttons">
-      <a href="#portfolio" class="btn">View Portfolio</a>
+  <!-- Your updated header/hero from last message -->
+  <header class="navbar">
+    <div class="logo">
+      <i class="fas fa-rocket"></i>
+      <span class="logo-text">AEROSPACE</span>
+    </div>
+    <div class="hamburger">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </div>
+    <div class="nav-menu">
+      <nav>
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#services">Services</a>
+        <a href="#skills">Skills</a>
+        <a href="#portfolio">Portfolio</a>
+        <a href="#resume">Resume</a>
+        <a href="#contact">Contact</a>
+      </nav>
       <a href="assets/resume.pdf" class="btn-outline">Download CV</a>
     </div>
-    <div class="social">
-      <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-      <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-      <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-    </div>
-    <div class="hero-profile">
-      <img src="assets/profile.jpg" alt="Bandaru Lokesh">
-    </div>
-  </div>
-</section>
+  </header>
 
-<section id="about" class="section">
-  <p class="section-tag">ABOUT ME</p>
-  <h2>Know Me More</h2>
-  <div class="about-grid">
-    <div>
-      <h3>I'm <span>Bandaru Lokesh</span>, an Aerospace Engineering Student</h3>
-      <p>Currently pursuing B.Tech in Aerospace Engineering at GITAM University, Hyderabad. Passionate about aerodynamics, propulsion systems, and spacecraft design.</p>
-      <ul class="info">
-        <li><b>Name:</b> Bandaru Lokesh</li>
-        <li><b>Email:</b> bandarulokesh8531@gmail.com</li>
-        <li><b>Phone:</b> +91 7993991374</li>
-        <li><b>From:</b> Vishakhapatnam, Andhra Pradesh</li>
-      </ul>
+  <section id="home" class="hero">
+    <div class="hero-content">
+      <span class="tag">👋 Welcome to my Portfolio</span>
+      <h1>Hi, I'm <span>Bandaru Lokesh</span></h1>
+      <h3>Aerospace Engineering Student</h3>
+      <p>Enthusiastic aerospace engineering student with a strong foundation in aerodynamics, propulsion, and spacecraft design.</p>
       <div class="hero-buttons">
-        <a href="assets/resume.pdf" class="btn">Download Resume</a>
-        <a href="#contact" class="btn-outline">Contact Me</a>
+        <a href="#portfolio" class="btn">View Portfolio</a>
+        <a href="assets/resume.pdf" class="btn-outline">Download CV</a>
+      </div>
+      <div class="social">
+        <a href="#" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+      </div>
+      <div class="hero-profile">
+        <img src="assets/profile.jpg" alt="Bandaru Lokesh">
       </div>
     </div>
-    <img src="assets/about.jpg" alt="Aerospace project work"> <!-- Add your own photo here -->
-  </div>
-</section>
+  </section>
 
-<section class="stats">
-  <div class="stat-box"><h2>10+</h2><p>Drone Projects</p></div>
-  <div class="stat-box"><h2>15+</h2><p>RC Plane Designs</p></div>
-  <div class="stat-box"><h2>20+</h2><p>Flight Hours</p></div>
-  <div class="stat-box"><h2>8+</h2><p>Model Aircraft Built</p></div>
-</section>
+  <!-- Add your other sections here (About, Stats, etc.) -->
 
-<section id="services" class="section light">
-  <p class="section-tag">SERVICES</p>
-  <h2>What I Offer</h2>
-  <div class="cards">
-    <div class="card">3D Modeling & CAD Design</div>
-    <div class="card">Simulation & Analysis</div>
-    <div class="card">Aerospace Design</div>
-    <div class="card">Component Development</div>
-    <div class="card">Product Design</div>
-    <div class="card">Innovation & Research</div>
-  </div>
-</section>
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const hamburger = document.querySelector('.hamburger');
+      const navMenu = document.querySelector('.nav-menu');
 
-<section id="skills" class="section">
-  <p class="section-tag">SKILLS</p>
-  <h2>Technical Expertise</h2>
-  <div class="cards">
-    <div class="card">ANSYS • CFD • Structural Analysis</div>
-    <div class="card">CATIA • SolidWorks • Fusion 360</div>
-    <div class="card">Aerodynamics • Propulsion • Spacecraft</div>
-    <div class="card">Rapid Prototyping</div>
-    <div class="card">Problem Solving</div>
-    <div class="card">English • Hindi • Telugu</div>
-  </div>
-</section>
+      hamburger.addEventListener('click', () => {
+        hamburger.classList.toggle('active');
+        navMenu.classList.toggle('active');
+      });
 
-<section id="portfolio" class="section light">
-  <p class="section-tag">PORTFOLIO</p>
-  <h2>My Projects & Work</h2>
-  <div class="portfolio-grid">
-    <div class="project-card">
-      <img src="assets/project1.jpg" alt="Drone Project">
-      <div class="project-content">
-        <h3>Drone Projects</h3>
-        <p>Designed and tested multiple quadcopters and drones.</p>
-      </div>
-    </div>
-    <div class="project-card">
-      <img src="assets/project2.jpg" alt="RC Plane">
-      <div class="project-content">
-        <h3>RC Plane Designs</h3>
-        <p>Over 15 custom remote-controlled aircraft models.</p>
-      </div>
-    </div>
-    <div class="project-card">
-      <img src="assets/project3.jpg" alt="Model Aircraft">
-      <div class="project-content">
-        <h3>Model Aircraft Builds</h3>
-        <p>Built 8+ scale models with custom features.</p>
-      </div>
-    </div>
-  </div>
-</section>
+      document.querySelectorAll('nav a').forEach(link => {
+        link.addEventListener('click', () => {
+          hamburger.classList.remove('active');
+          navMenu.classList.remove('active');
+        });
+      });
 
-<section id="resume" class="section">
-  <p class="section-tag">RESUME</p>
-  <h2>Detailed Resume</h2>
-  <div class="resume-container">
-    <div class="resume-column">
-      <h3>Education</h3>
-      <div class="resume-item">
-        <h4>B.Tech Aerospace Engineering</h4>
-        <p>GITAM University, Hyderabad</p>
-        <p>2023 – Present</p>
-      </div>
-    </div>
-    <div class="resume-column">
-      <h3>Experience & Achievements</h3>
-      <ul class="resume-list">
-        <li>10+ Drone Projects Completed</li>
-        <li>15+ RC Plane Designs</li>
-        <li>20+ Flight Hours</li>
-        <li>8+ Model Aircraft Built</li>
-      </ul>
-    </div>
-  </div>
-  <div class="resume-download">
-    <a href="assets/resume.pdf" class="btn">Download Full Resume (PDF)</a>
-  </div>
-</section>
+      window.addEventListener('scroll', () => {
+        const navbar = document.querySelector('.navbar');
+        if (window.scrollY > 50) {
+          navbar.classList.add('scrolled');
+        } else {
+          navbar.classList.remove('scrolled');
+        }
+      });
 
-<section id="contact" class="section light">
-  <p class="section-tag">CONTACT</p>
-  <h2>Get In Touch</h2>
-  <form class="contact-form">
-    <input type="text" placeholder="Your Name" required>
-    <input type="email" placeholder="Your Email" required>
-    <textarea placeholder="Your Message" required></textarea>
-    <button type="submit" class="btn">Send Message</button>
-  </form>
-</section>
-
-<footer>
-  © 2026 AEROSPACE — Made by Bandaru Lokesh
-</footer>
-
-<script src="js/script.js"></script>
+      document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+        anchor.addEventListener('click', function (e) {
+          e.preventDefault();
+          const target = document.querySelector(this.getAttribute('href'));
+          if (target) {
+            window.scrollTo({
+              top: target.offsetTop - 100,
+              behavior: 'smooth'
+            });
+          }
+        });
+      });
+    });
+  </script>
 </body>
 </html>
