--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Bandaru Lokesh | Aerospace Portfolio</title>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -25,7 +25,9 @@
       background: #ffffff;
     }
 
-    /* Beautiful Navbar */
+    img { max-width: 100%; display: block; }
+
+    /* Navbar */
     .navbar {
       position: fixed;
       top: 0;
@@ -58,20 +60,12 @@
       transition: color 0.4s;
     }
 
-    .logo i {
-      font-size: 2.6rem;
-      color: var(--accent);
-    }
+    .logo i { font-size: 2.6rem; color: var(--accent); }
 
     .navbar.scrolled .logo { color: var(--dark); }
     .navbar.scrolled .logo i { color: var(--primary); }
 
-    .hamburger {
-      display: none;
-      cursor: pointer;
-      flex-direction: column;
-      gap: 6px;
-    }
+    .hamburger { display: none; cursor: pointer; flex-direction: column; gap: 6px; }
 
     .bar {
       width: 30px;
@@ -86,16 +80,9 @@
     .hamburger.active .bar:nth-child(2) { opacity: 0; }
     .hamburger.active .bar:nth-child(3) { transform: translateY(-10px) rotate(-45deg); }
 
-    .nav-menu {
-      display: flex;
-      align-items: center;
-      gap: 3rem;
-    }
+    .nav-menu { display: flex; align-items: center; gap: 3rem; }
 
-    nav {
-      display: flex;
-      gap: 2.5rem;
-    }
+    nav { display: flex; gap: 2.5rem; }
 
     nav a {
       text-decoration: none;
@@ -120,26 +107,16 @@
       transition: all 0.3s;
     }
 
-    .btn-outline:hover {
-      background: white;
-      color: var(--primary);
-    }
+    .btn-outline:hover { background: white; color: var(--primary); }
 
-    .navbar.scrolled .btn-outline {
-      border-color: var(--primary);
-      color: var(--primary);
-    }
+    .navbar.scrolled .btn-outline { border-color: var(--primary); color: var(--primary); }
+    .navbar.scrolled .btn-outline:hover { background: var(--primary); color: white; }
 
-    .navbar.scrolled .btn-outline:hover {
-      background: var(--primary);
-      color: white;
-    }
-
-    /* Beautiful Hero Header */
+    /* Hero Header */
     .hero {
       position: relative;
       min-height: 100vh;
-      background-image: url('assets/hero-bg.jpg');
+      background-image: url('https://images.pexels.com/photos/912050/pexels-photo-912050.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
@@ -155,7 +132,7 @@
       position: absolute;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      background: rgba(0, 30, 100, 0.6);
+      background: rgba(0, 30, 100, 0.65);
       z-index: 1;
     }
 
@@ -176,31 +153,13 @@
       margin-bottom: 24px;
     }
 
-    .hero-content h1 {
-      font-size: 4.8rem;
-      margin: 20px 0;
-      line-height: 1.1;
-    }
-
+    .hero-content h1 { font-size: 4.8rem; margin: 20px 0; line-height: 1.1; }
     .hero-content h1 span { color: var(--accent); }
 
-    .hero-content h3 {
-      font-size: 2.4rem;
-      margin-bottom: 20px;
-    }
+    .hero-content h3 { font-size: 2.4rem; margin-bottom: 20px; }
+    .hero-content p { font-size: 1.3rem; max-width: 700px; margin: 0 auto 40px; }
 
-    .hero-content p {
-      font-size: 1.3rem;
-      max-width: 700px;
-      margin: 0 auto 40px;
-    }
-
-    .hero-buttons {
-      display: flex;
-      gap: 20px;
-      justify-content: center;
-      margin-bottom: 50px;
-    }
+    .hero-buttons { display: flex; gap: 20px; justify-content: center; margin-bottom: 50px; }
 
     .btn {
       padding: 14px 36px;
@@ -213,28 +172,11 @@
       box-shadow: 0 8px 20px rgba(0, 170, 255, 0.3);
     }
 
-    .btn:hover {
-      background: white;
-      color: var(--primary);
-    }
+    .btn:hover { background: white; color: var(--primary); }
 
-    .social {
-      display: flex;
-      gap: 20px;
-      justify-content: center;
-      margin-bottom: 40px;
-    }
-
-    .social a {
-      color: white;
-      font-size: 1.9rem;
-      transition: all 0.3s;
-    }
-
-    .social a:hover {
-      color: var(--accent);
-      transform: translateY(-6px);
-    }
+    .social { display: flex; gap: 20px; justify-content: center; margin-bottom: 40px; }
+    .social a { color: white; font-size: 1.9rem; transition: all 0.3s; }
+    .social a:hover { color: var(--accent); transform: translateY(-6px); }
 
     .hero-profile img {
       width: 220px;
@@ -242,57 +184,57 @@
       border-radius: 50%;
       border: 8px solid white;
       box-shadow: 0 15px 40px rgba(0, 0, 0, 0.4);
+      margin: 0 auto;
     }
 
-    /* Rest of your sections (add your existing ones below) */
-    /* ... */
+    /* Add styles for other sections here (About, Stats, etc.) - keeping it concise */
+    .section { padding: 100px 5%; text-align: center; }
+    .section-tag { color: var(--primary); letter-spacing: 4px; text-transform: uppercase; font-size: 0.9rem; margin-bottom: 12px; }
+    .section h2 { font-size: 3rem; margin-bottom: 60px; }
+    .light { background: var(--light); }
+
+    /* Stats */
+    .stats { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 40px; padding: 80px 5%; background: var(--primary); color: white; }
+    .stat-box h2 { font-size: 3.8rem; }
+    
+    /* Cards */
+    .cards { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 32px; max-width: 1300px; margin: 0 auto; }
+    .card { background: white; padding: 44px 24px; border-radius: 20px; box-shadow: 0 10px 35px rgba(0,0,0,0.08); transition: all 0.4s; }
+    .card:hover { transform: translateY(-16px); }
+
+    /* Portfolio */
+    .portfolio-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(360px, 1fr)); gap: 40px; max-width: 1300px; margin: 0 auto; }
+    .project-card { background: white; border-radius: 20px; overflow: hidden; box-shadow: 0 10px 35px rgba(0,0,0,0.08); }
+    .project-card img { height: 250px; object-fit: cover; }
+    .project-content { padding: 24px; }
+
+    /* Contact */
+    .contact-form { max-width: 720px; margin: 0 auto; display: grid; gap: 24px; }
+    .contact-form input, .contact-form textarea { padding: 18px; border-radius: 14px; border: 1px solid #ddd; }
+
+    /* Footer */
+    footer { background: var(--dark); color: white; text-align: center; padding: 40px; }
 
     /* Mobile */
     @media (max-width: 768px) {
       .hamburger { display: flex; }
-      .nav-menu {
-        position: absolute;
-        top: 100%;
-        left: 0;
-        width: 100%;
-        background: rgba(255, 255, 255, 0.95);
-        flex-direction: column;
-        padding: 40px 0;
-        gap: 32px;
-        display: none;
-      }
+      .nav-menu { position: absolute; top: 100%; left: 0; width: 100%; background: rgba(255,255,255,0.95); flex-direction: column; padding: 40px 0; gap: 32px; display: none; }
       .nav-menu.active { display: flex; }
-      nav { flex-direction: column; gap: 28px; }
       .hero-content h1 { font-size: 3.5rem; }
-      .hero-content h3 { font-size: 2rem; }
-      .hero-buttons { flex-direction: column; align-items: center; }
-      .hero-profile img { width: 180px; height: 180px; }
+      .hero-buttons { flex-direction: column; }
     }
   </style>
 </head>
 <body>
-  <!-- Your updated header/hero from last message -->
   <header class="navbar">
-    <div class="logo">
-      <i class="fas fa-rocket"></i>
-      <span class="logo-text">AEROSPACE</span>
-    </div>
-    <div class="hamburger">
-      <span class="bar"></span>
-      <span class="bar"></span>
-      <span class="bar"></span>
-    </div>
+    <div class="logo"><i class="fas fa-rocket"></i> AEROSPACE</div>
+    <div class="hamburger"><span class="bar"></span><span class="bar"></span><span class="bar"></span></div>
     <div class="nav-menu">
       <nav>
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#services">Services</a>
-        <a href="#skills">Skills</a>
-        <a href="#portfolio">Portfolio</a>
-        <a href="#resume">Resume</a>
-        <a href="#contact">Contact</a>
+        <a href="#home">Home</a><a href="#about">About</a><a href="#services">Services</a><a href="#skills">Skills</a>
+        <a href="#portfolio">Portfolio</a><a href="#resume">Resume</a><a href="#contact">Contact</a>
       </nav>
-      <a href="assets/resume.pdf" class="btn-outline">Download CV</a>
+      <a href="resume.pdf" class="btn-outline">Download CV</a> <!-- Upload your PDF to repo root as resume.pdf -->
     </div>
   </header>
 
@@ -304,7 +246,7 @@
       <p>Enthusiastic aerospace engineering student with a strong foundation in aerodynamics, propulsion, and spacecraft design.</p>
       <div class="hero-buttons">
         <a href="#portfolio" class="btn">View Portfolio</a>
-        <a href="assets/resume.pdf" class="btn-outline">Download CV</a>
+        <a href="resume.pdf" class="btn-outline">Download CV</a>
       </div>
       <div class="social">
         <a href="#" target="_blank"><i class="fab fa-github"></i></a>
@@ -313,12 +255,22 @@
         <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
       </div>
       <div class="hero-profile">
-        <img src="assets/profile.jpg" alt="Bandaru Lokesh">
+        <img src="https://via.placeholder.com/220" alt="Bandaru Lokesh"> <!-- Replace with your photo URL or upload to repo -->
       </div>
     </div>
   </section>
 
-  <!-- Add your other sections here (About, Stats, etc.) -->
+  <!-- Your other sections (copy from previous if needed, or add here) -->
+  <!-- Example About -->
+  <section id="about" class="section light">
+    <p class="section-tag">ABOUT ME</p>
+    <h2>Know Me More</h2>
+    <p>Add your about text here...</p>
+  </section>
+
+  <!-- Add Stats, Services, Skills, Portfolio, Resume, Contact similarly -->
+
+  <footer>© 2026 AEROSPACE — Made by Bandaru Lokesh</footer>
 
   <script>
     document.addEventListener('DOMContentLoaded', () => {
@@ -338,24 +290,14 @@
       });
 
       window.addEventListener('scroll', () => {
-        const navbar = document.querySelector('.navbar');
-        if (window.scrollY > 50) {
-          navbar.classList.add('scrolled');
-        } else {
-          navbar.classList.remove('scrolled');
-        }
+        document.querySelector('.navbar').classList.toggle('scrolled', window.scrollY > 50);
       });
 
       document.querySelectorAll('a[href^="#"]').forEach(anchor => {
         anchor.addEventListener('click', function (e) {
           e.preventDefault();
           const target = document.querySelector(this.getAttribute('href'));
-          if (target) {
-            window.scrollTo({
-              top: target.offsetTop - 100,
-              behavior: 'smooth'
-            });
-          }
+          if (target) window.scrollTo({ top: target.offsetTop - 100, behavior: 'smooth' });
         });
       });
     });
